--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,9 +5,18 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
+# Set the permissions for the GITHUB_TOKEN
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
     - name: Checkout
@@ -25,7 +34,7 @@ jobs:
     
     - name: Set up environment
       run: |
-        echo "DEBUG=False" >> .env
+        echo "DEBUG=False" > .env
         echo "SECRET_KEY=temp_key_for_build" >> .env
         echo "ALLOWED_HOSTS=*" >> .env
     
@@ -38,15 +47,15 @@ jobs:
     - name: Export static site
       run: python manage.py export_to_gh_pages
     
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: docs
-        branch: gh-pages
-        clean: true
-        clean-exclude: |
-          CNAME
-          .nojekyll
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
+      id: pages
     
-    - name: Create .nojekyll file
-      run: touch docs/.nojekyll
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: 'docs/'
+    
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
