--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,55 +7,59 @@ on:
 
 # Set the permissions for the GITHUB_TOKEN
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Set up environment
-      run: |
-        echo "DEBUG=False" > .env
-        echo "SECRET_KEY=temp_key_for_build" >> .env
-        echo "ALLOWED_HOSTS=*" >> .env
-    
-    - name: Run migrations
-      run: python manage.py migrate --noinput
-    
-    - name: Collect static files
-      run: python manage.py collectstatic --noinput
-    
-    - name: Export static site
-      run: python manage.py export_to_gh_pages
-    
-    - name: Setup Pages
-      uses: actions/configure-pages@v3
-      id: pages
-    
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: 'docs/'
-    
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Set up environment
+        run: |
+          echo "DEBUG=False" > .env
+          echo "SECRET_KEY=temp_key_for_build" >> .env
+          echo "ALLOWED_HOSTS=*" >> .env
+
+      - name: Run migrations
+        run: python manage.py migrate --noinput
+
+      - name: Collect static files
+        run: python manage.py collectstatic --noinput
+
+      - name: Export static site
+        run: python manage.py export_to_gh_pages
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+        id: pages
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'docs/'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
