--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,22 +5,13 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
-# Set the permissions for the GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  build-and-deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -51,15 +42,18 @@ jobs:
       - name: Export static site
         run: python manage.py export_to_gh_pages
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        id: pages
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'docs/'
 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
