--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -4,18 +4,24 @@ on:
   push:
     branches: [ master ]
   workflow_dispatch:
+  # Allow manual deployment from the Actions tab
+  page_build:
+    types: [none]
+  workflow_dispatch:
 
 # Set the permissions for the GITHUB_TOKEN
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -50,18 +56,18 @@ jobs:
     - name: Create .nojekyll file
       run: touch docs/.nojekyll
     
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: JamesIves/github-pages-deploy-action@v4
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        folder: 'docs/'
-        branch: gh-pages
-        clean: true
-        force: true
-        token: ${{ secrets.GITHUB_TOKEN }}
-        target-folder: '.'  # Deploy contents of docs/ to root of gh-pages
-    
-    - name: Show deployment status
-      run: |
-        echo "Deployment status: ${{ steps.deployment.outcome }}"
-        echo "Deployment URL: ${{ steps.deployment.outputs.page_url }}"
+        path: 'docs/'
+        
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
