Added filtering logic to create sub-pages for theme groups

--- a/map_config.json
+++ b/map_config.json
@@ -1,4 +1,18 @@
 {
+  "themeGroups": [
+    {
+      "id": "biodiversity",
+      "name": "Biodiversity",
+      "icon": "fa-leaf",
+      "themeIds": ["ecosystems", "ecological-communities", "individual-species"]
+    },
+    {
+      "id": "connectivity",
+      "name": "Species",
+      "icon": "fa-paw",
+      "themeIds": ["habitat-suitability", "wildlife-corridors", "threats"]
+    }
+  ],
   "themes": [
     {
       "id": "ecological-communities",
